code/tui/snapshots/fullscreen/usage/start_plan_usage_chinese_fullscreen_narrow.snap
---
source: code/tui/src/app/usage_tests.rs
expression: "render(&app, 48, 28)"
---
  .                                   [仪表盘]


  ┌── 额度 ──────────────────────────────[✗]─┐
  │                                          │
  │> BigModel 套餐  ·  Start Trial           │
  │                                          │
  │  GLM-5.3-Flash 额度 ──────────────────── │
  │  1d 额度  ·  剩余 75%（已用 25%）        │
  │  重置时间  ·  2026-10-02 16:00 UTC       │
  │                                          │
  │                                          │
  │                                          │
  │                                          │
  │                                          │
  │                                          │
  │                                          │
  │                                          │
  │                                          │
  │                                          │
  │                                          │
  │                                          │
  │                                          │
  └──────────────────────────────────────────┘
  > 构建任何内容
  ────────────────────────────────── 自动模型

  Esc 关闭  ·  运行 /usage 刷新
