code/tui/snapshots/fullscreen/usage/start_plan_usage_fullscreen.snap
---
source: code/tui/src/app/usage_tests.rs
expression: screen
---
  .                                                                [Dashboard]


        ┌── Usage ─────────────────────────────────────────────────[✗]─┐
        │                                                              │
        │> BigModel plan  ·  Start Trial                               │
        │  GLM-5.3-Flash                                               │
        │  Model  ·  glm-5.3-flash                                     │
        │  1d window  ·  75% left (25% used)                           │
        │  Resets  ·  2026-10-02 16:00 UTC                             │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
  ──────└──────────────────────────────────────────────────────────────┘──────
  > Build anything
  ─────────────────────────────────────────────────────────── Automatic model

  Esc to close  ·  Run /usage to refresh
