code/tui/snapshots/fullscreen/usage/usage_failed.snap
---
source: code/tui/src/app/usage_tests.rs
expression: "render(&app, 80, 20)"
---
  .                                                                [Dashboard]

> /usage┌── Usage ─────────────────────────────────────────────────[✗]─┐
        │                                                              │
● Could │  Could not load account usage. Run /usage to retry.          │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
  ──────│                                                              │──────
  > Buil└──────────────────────────────────────────────────────────────┘
  ─────────────────────────────────────────────────────────── Automatic model

  Esc to close
