code/tui/snapshots/fullscreen/usage/usage_kimi.snap
---
source: code/tui/src/app/usage_tests.rs
expression: screen
---
  .                                                                [Dashboard]


        ┌── Usage ─────────────────────────────────────────────────[✗]─┐
        │                                                              │
        │> Kimi plan  ·  Allegro                                       │
        │  5-hour limit                                                │
        │  5h window  ·  87% left (13% used)                           │
        │  Resets  ·  2026-09-28 00:00 UTC                             │
        │  Monthly limit                                               │
        │  Window  ·  99% left (1% used)                               │
        │  Resets  ·  Not reported                                     │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
  ──────└──────────────────────────────────────────────────────────────┘──────
  > Build anything
  ─────────────────────────────────────────────────────────── Automatic model

  Esc to close  ·  Run /usage to refresh
